// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Footer/> 1`] = `
<DocumentFragment>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          data-nimg="1"
          decoding="async"
          height="22"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="22"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2023 AXA Tous droits réservés - v1.0.0
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Render <Footer/> fullscreen 1`] = `
<DocumentFragment>
  <footer
    class="af-footer af-footer--fullscreen"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          data-nimg="1"
          decoding="async"
          height="22"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="22"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2023 AXA Tous droits réservés - v1.0.0
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
